Removed unnecessary system modules from module descriptor